--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<video controls width="250">
+<video controls autoplay loop playsinline id="myVideo">  
 
-  <source src="/shared-assets/videos/123.mp4" type="video/mp4" />
+  <source src="123.mp4" type="video/mp4" />
+
 
 </video>
