--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
-<video controls autoplay loop playsinline id="myVideo">  
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>xenolithium7</title>
+    <style>
+body {
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 100%;  /* Занимает всю ширину */
+    height: 100%; /* Занимает всю высоту */
+    object-fit: fill; /* Растягивает видео без соблюдения пропорций */
+    z-index: 0; /* Чтобы видео было под текстом */
+}
 
-  <source src="123.mp4" type="video/mp4" />
-
-
-</video>
+</style>
+<video autoplay controls muted loop playsinline id="myVideo">   
+      <source src="123.mp4" type="video/mp4">
+      обнови браузер дед)
+        </video>
