--- a/index.html
+++ b/index.html
@@ -1,24 +1,96 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="refresh" content="5;url=http://xenolithium7.ru">
     <meta charset="utf-8">
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>xenolithium7</title>
-    <!-- Yandex.Metrika counter -->
+    <title>мяу</title>
+	<!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function(m,e,t,r,i,k,a){
         m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
         m[i].l=1*new Date();
         for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
         k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
-    })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=104377854', 'ym');
+    })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=104377848', 'ym');
 
-    ym(104377854, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
+    ym(104377848, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/104377854" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/104377848" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+    <link href='https://fonts.googleapis.com/css?family=Google+Sans' rel='stylesheet'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <style>
 body {
+    font-family: 'Google Sans'; font-size: 120%;
+	margin-top: 20px
+}
+
+* {
+    box-sizing: border-box;
+}
+
+
+.dot {
+    height: 12px;
+    width: 12px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    z-index: 1;
+}
+
+.container {
+	height: 50%;
+    width: 70%;
+    border: 3px solid #404040;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    overflow: auto;
+    margin: auto;
+    position: relative; /* Изменено с right: 0; left: auto */
+    z-index: 1; /* Добавлено */
+    background-color: rgba(0, 0, 0, 0.8); /* Чёрный фон с 80% непрозрачностью */
+    color: white; /* Белый цвет текста для контраста */
+}
+
+.top {
+    padding: 10px;
+    background: #404040;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    z-index: 1;
+}
+
+.content {
+    padding: 10px;
+    overflow: auto;
+    margin: auto;
+    position: relative; /* Изменено с right: 0; left: auto */
+    z-index: 1; /* Добавлено */
+}
+
+.footer {
+    margin-top: 20px;
+    text-align: center;
+    overflow: auto;
+    margin: auto;
+    position: relative; /* Изменено с right: 0; left: auto */
+    z-index: 1; /* Добавлено */
+    font-family: 'Montserrat'; font-size: 50%;
+}
+
+.overlay {
+    position: fixed;  /* или absolute, в зависимости от вашего дизайна */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Чёрный цвет с 50% прозрачностью */
+    z-index: 1; /* Убедитесь, что слой выше видео */
+}
+
 #myVideo {
     position: fixed;
     right: 0;
@@ -30,8 +102,30 @@ body {
 }
 
 </style>
-<video autoplay controls muted loop playsinline id="myVideo">   
+<video autoplay muted loop playsinline id="myVideo">   
       <source src="123.mp4" type="video/mp4">
       обнови браузер дед)
         </video>
+
+  <div class="content">
+    <h3>Телепортирование через 5 секунд :3</h3>
+    <p></p>
+  </div>
+</div>
+</head>
+<body class="dark">
+        <div class="content">
+			<logo>
+            <a class="dark"><img src="logoImage.png" width=50% alt="Логотип" style="object-fit: contain"></a> <!-- Логотип сайта -->
+			</logo>
+
+
+</head>
+</body>
+</script>
+</html>
+
+
+
+
 
